[gd_scene load_steps=18 format=2]

[ext_resource path="res://DrawingBoard.gd" type="Script" id=1]
[ext_resource path="res://DrawingBoard/DrawingBoard.gd" type="Script" id=2]
[ext_resource path="res://DrawingBoard/Background.png" type="Texture" id=3]
[ext_resource path="res://DrawingBoard/Colors.gd" type="Script" id=4]
[ext_resource path="res://DrawingBoard/OutputBoard.gd" type="Script" id=5]
[ext_resource path="res://DrawingBoard/Frame.png" type="Texture" id=6]
[ext_resource path="res://pink_to_transparency.shader" type="Shader" id=7]
[ext_resource path="res://DrawingBoard/DoneButton/DoneButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://DrawingBoard/switch13.wav" type="AudioStream" id=9]
[ext_resource path="res://DrawingBoard/drawing.wav" type="AudioStream" id=10]
[ext_resource path="res://DrawingBoard/empty_trash.wav" type="AudioStream" id=11]

[sub_resource type="World" id=1]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 192, 192 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/chroma_key = Color( 1, 0, 1, 1 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Board")

[sub_resource type="Animation" id=5]
resource_name = "__INIT__"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Handle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_away"
tracks/0/type = "value"
tracks/0/path = NodePath("Handle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1279.19, 0 ) ]
}

[node name="DrawingBoard" type="Node2D"]
script = ExtResource( 1 )

[node name="Board" type="Viewport" parent="."]
editor/display_folded = true
size = Vector2( 128, 128 )
world = SubResource( 1 )
handle_input_locally = false
disable_3d = true
render_target_v_flip = true
render_target_clear_mode = 2
render_target_update_mode = 3

[node name="Drawing" type="Node2D" parent="Board"]
script = ExtResource( 2 )

[node name="Paper" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 720 )

[node name="Handle" type="Node2D" parent="."]
position = Vector2( 1279.19, 0 )

[node name="Colors" type="Node2D" parent="Handle"]
script = ExtResource( 4 )

[node name="OutputBoard" type="Area2D" parent="Handle"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Handle/OutputBoard"]
shape = SubResource( 2 )

[node name="Frame" type="Sprite" parent="Handle/OutputBoard"]
texture = ExtResource( 6 )

[node name="Output" type="Sprite" parent="Handle/OutputBoard"]
material = SubResource( 3 )
position = Vector2( -0.100586, 0.491943 )
scale = Vector2( 3, 3 )
texture = SubResource( 4 )

[node name="DoneButton" parent="Handle" instance=ExtResource( 8 )]
position = Vector2( 640, 650 )

[node name="Sounds" type="Node" parent="."]

[node name="Switch" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="Drawing" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 10 )

[node name="Clear" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/__INIT__ = SubResource( 5 )
anims/fade_away = SubResource( 6 )
[connection signal="clear_ordered" from="Handle/Colors" to="Board/Drawing" method="_on_Colors_clear_ordered"]
[connection signal="clear_ordered" from="Handle/Colors" to="Handle/DoneButton" method="_on_Colors_clear_ordered"]
[connection signal="draw_color_changed" from="Handle/Colors" to="Board/Drawing" method="_on_Colors_draw_color_changed"]
[connection signal="pen_drawn" from="Handle/OutputBoard" to="Board/Drawing" method="_on_OutputBoard_pen_drawn"]
[connection signal="pen_drawn" from="Handle/OutputBoard" to="Handle/DoneButton" method="_on_OutputBoard_pen_drawn"]
[connection signal="done_pressed" from="Handle/DoneButton" to="." method="_on_DoneButton_done_pressed"]
